Closed Bug 1908034 Opened 3 months ago Closed 3 months ago

ES3 webgl1 contexts on Windows regress CI tests when pref'd on

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect

Tracking

()

RESOLVED FIXED
130 Branch
Tracking Status
firefox130 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

References

Details

Attachments

(2 files)

No description provided.
Pushed by jgilbert@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0299fcb2fb84 Remap client HALF_FLOAT_OES<->HALF_FLOAT gl for webgl1 IMPL_COLOR_READ_TYPE. r=gfx-reviewers,lsalzman https://hg.mozilla.org/integration/autoland/rev/048db7507219 Use test-compile for draw_buffers/frag_depth/shader_texture_lod for webgl1 on es3. r=gfx-reviewers,lsalzman
Status: NEW → RESOLVED
Closed: 3 months ago
Resolution: --- → FIXED
Target Milestone: --- → 130 Branch
Regressions: 1908333
Blocks: 1908740
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: