Bug 1908034 - Remap client HALF_FLOAT_OES<->HALF_FLOAT gl for webgl1 IMPL_COLOR_READ_TYPE. r=gfx-reviewers,lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D216633